# eventic

./: .env  .gitignore  Dockerfile  README.md  constants.py  db.sqlite3-journal  db_backup.sql  delete_migrations.py  docker-compose.yml  events_dump.json  manage.py  mydatabase_backup.sql  pyproject.toml  requirements.txt
apps/base/: admin.py  models.py
apps/events/: admin.py  apps.py  event_filters.py  models.py  serializers.py  service.py  services.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_baseevent_price.py  0002_initial.py  (+3 more)
apps/favorites/: serializers.py  urls.py  views.py
apps/favourite/: admin.py  models.py  serializers.py  urls.py  views.py
apps/invitations/: admin.py  apps.py  constance.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/locations/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notification/: admin.py  apps.py  constance.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: admin.py  apns_utils.py  apps.py  consumers.py  firebase_utils.py  models.py  routing.py  serializers.py  signals.py  task.py  tasks.py  urls.py  views.py
apps/profiles/: admin.py  apps.py  models.py  organizer_filter.py  serializer.py  urls.py  views.py
apps/questions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  managers.py  models.py  serializer.py  urls.py  utils.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  production.py
eventic/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
(+17 files in other folders)
