[tool.poetry]
name = "eventic-backend"
version = "0.1.0"
description = ""
authors = ["Aliaskar <alyas.toronov@mail.ru>"]
readme = "README.md"
packages = [{include = "eventic_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
