[tool.poetry]
name = "eventic-backend"
version = "0.1.0"
description = ""
authors = ["Aliaskar <alyas.toronov@mail.ru>"]
readme = "README.md"
packages = [{include = "eventic_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0"
djangorestframework = "3.14.0"
asgiref = "3.7.2"
attrs = "23.1.0"
django-cors-headers = "4.3.1"
django-filter = "23.5"
django-jazzmin = "2.6.0"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.27.0"
drf-yasg = "1.21.7"
gunicorn = "21.2.0"
inflection = "0.5.1"
jsonschema = "4.20.0"
jsonschema-specifications = "2023.11.2"
packaging = "23.2"
pillow = "10.1.0"
psycopg2-binary = "2.9.9"
pyjwt = "2.8.0"
python-decouple = "3.8"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.32.0"
rpds-py = "0.15.2"
sqlparse = "0.4.4"
typing-extensions = "4.9.0"
uritemplate = "4.1.1"
django-shell-plus = "^1.1.7"
django-extensions = "^3.2.3"
ipython = "^8.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
